--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/DodanimJR/SecondExpressApi#readme",
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "prisma": "^3.15.2",
     "yarn": "^1.22.19"
   }
