--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^3.15.2",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "lodash": "^4.17.21",
     "prisma": "^3.15.2",
     "yarn": "^1.22.19"
   }
