--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/DodanimJR/SecondExpressApi#readme",
   "dependencies": {
     "@prisma/client": "^3.15.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
